--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ui5/webcomponents": "^1.11.0",
     "@ui5/webcomponents-fiori": "^1.11.0",
     "@ui5/webcomponents-react": "^1.10.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
