chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://nttdata-challenge-server.onrender.com
+REACT_APP_API_URL=https://nttdata-challenge-server.onrender.com OR http://localhost:5000/movies if you are running the server locally
